--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container__conteudo">
             <img src="./img/robot.png" alt="robô mergulhador" class="container__imagem-robo" />
             <div class="container__informacoes">
-                <span class="texto__insere" id="texto__insere">Insira um número entre 1 e 100</span>
+                <span class="texto__insere" id="texto__insere">Escolha um número entre 1 e 100</span>
                 <div class="container__insere" id="container__insere">
                     <input type="number" class="input__numero" id="input__numero" max="100" min="1" autofocus onload="zeraInput()">
                     <button class="btn__adivinhar" onclick="adivinharNumeroSecreto()">Adivinhar</button>
